update with thum

--- a/index.html
+++ b/index.html
@@ -3,6 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Primary Meta Tags -->
+<title>Oriyomi – Your Partner in Growth</title>
+<meta name="title" content="Oriyomi – Your Partner in Growth">
+<meta name="description" content="Strategic planning, project management & innovative solutions for impact-driven organizations.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://oriyomi-abagun.vercel.app/">
+<meta property="og:title" content="Oriyomi – Your Partner in Growth">
+<meta property="og:description" content="Strategic planning, project management & innovative solutions for impact-driven organizations.">
+<meta property="og:image" content="https://oriyomi-abagun.vercel.app/asset/Thumnaoils.png"> <!-- Replace with actual image URL -->
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:url" content="https://oriyomi-abagun.vercel.app/">
+<meta name="twitter:title" content="Oriyomi – Your Partner in Growth">
+<meta name="twitter:description" content="Strategic planning, project management & innovative solutions for impact-driven organizations.">
+<meta name="twitter:image" content="https://oriyomi-abagun.vercel.app/asset/Thumnaoils.png"> <!-- Replace with actual image URL -->
+
+    
     <link rel="icon" type="image/png" href="asset/favicon.ico">
     
     <title>Oriyomi Abagun</title>
